syntax = "proto3";

package FrameProto;

message StartGame
{
    int32 framecount = 1;
}

message PlayerOperate 
{
    string userid = 1;
    repeated int32 data = 2;   // 某帧下，玩家的按键列表
    float mousex = 3;
    float mousey = 4;
}

message GameReplay {
    repeated Frame frames = 1;
}

message Frame
{
    int64 time = 1;
}

message HashString
{
    int32 frame = 1;
    string hash = 2;
}